# monkey-interpreter-python

./: .gitignore  pyproject.toml
py_interpreter/: monkey.py  monkey_ast.py  monkey_evaluator.py  monkey_lexer.py  monkey_parser.py  monkey_thing.py  monkey_token.py
tests/: test_ast.py  test_evaluator.py  test_lexer.py  test_parser.py  test_thing.py
