[tool.poetry]
name = "py-interpreter"
version = "0.1.0"
description = ""
authors = ["evanasse <etienne.vanasse@outlook.com>"]
readme = "README.md"
packages = [{ include = "py_interpreter" }]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
python-lsp-server = { extras = ["rope"], version = "^1.7.4" }
ruff = "^0.0.282"
rope = "^1.9.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
select = ["I", "F", "E", "W"]
